--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,11 @@
   <body>
     <div class="left">
       <ul class="messages" id="messages"></ul>
-      <form action="">
+      <div class="container">
         <input id="user" type="text" placeholder="Username" />
-        <button id="join">Join</button>
+        <button id="join" onclick="join()">Join</button>
         <input id="m" autocomplete="off" />
-        <button>Send</button>
-      </form>
+      </div>
     </div>
     <div class="right">
       <ul class="messages" id="p-messages"></ul>
