--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
         </div>
         <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
         <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+        <script src="javascripts/react-with-addons.min.js"></script>
+        <script src="javascripts/JSXTransformer.js"></script>
         <script src="vendor/sui/semantic.min.js"></script>
         <script src="javascripts/app.js"></script>
     </body>
